fix(status): fix left icon overflow display

--- a/projects/status/src/status.component.scss
+++ b/projects/status/src/status.component.scss
@@ -17,6 +17,10 @@ ngx-status {
             font-size: 2rem;
         }
 
+        > .mat-icon {
+            overflow: visible;
+        }
+
         > span {
             width: calc(100% - 24px);
             b {
